# forge-lib

./: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  INSTALL.md  Makefile  README.md  VERIFY.md  ensure-built.sh  frontmatter.sh  generate-agent-skills.sh  install-agents.sh  install-skills.sh  module.yaml  strip-front.sh  sync-rosters.sh
.github/: copilot-instructions.md
mk/: common.mk  lint.mk  shell.mk
mk/agents/: install.mk  verify.mk
mk/skills/: install.mk  verify.mk
src/: dci.rs  lib.rs  validate.rs
src/deploy/: mod.rs  provider.rs  tests.rs
src/manifest/: mod.rs  tests.rs
src/parse/: mod.rs  tests.rs
src/sidecar/: mod.rs  tests.rs
src/skill/: mod.rs  tests.rs
src/strip/: mod.rs  tests.rs
tests/: helpers.sh  install_agents.rs  install_skills.rs  strip_front.rs  test-agent-frontmatter.sh  test-defaults-consistency.sh  test-deploy-parity.sh  test-module-structure.sh  test-skill-integrity.sh
tests/fixtures/codex/: DataAnalyst.prompt.md  DataAnalyst.toml  SystemArchitect.prompt.md  SystemArchitect.toml
