[package]
name = "forge-lib"
version = "0.1.0"
edition = "2021"
description = "Forge shared library — frontmatter parsing, markdown processing, agent deployment utilities"

[lib]
name = "forge_lib"
path = "src/lib.rs"

[[bin]]
name = "strip-front"
path = "src/bin/strip-front.rs"

[[bin]]
name = "install-agents"
path = "src/bin/install-agents.rs"

[[bin]]
name = "install-skills"
path = "src/bin/install-skills.rs"

[[bin]]
name = "validate-module"
path = "src/bin/validate-module.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tempfile = "3"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
